--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,7 @@ deps/zlib/zlib.target.mk
 # test artifacts
 tools/faketime
 icu_config.gypi
+
+
+#Jetbrains project files (WebStorm / Clion)
+/.idea/
